feat: Implement product details and enhance UI
- Add product details screen with comprehensive information including:
    - Product title, category, price, discount, rating, description
    - Brand, SKU, stock, weight, dimensions, warranty, shipping, availability, return policy, minimum order quantity
    - Barcode, QR code, tags, and reviews
- Implement product card with improved layout and information display.
- Add loading shimmer for product grid.
- Integrate `flutter_rating_bar` for displaying product ratings.
- Update API response handling to accommodate `products` key.
- Make `brand` field optional in product data models and entities.
- Update localization strings for product details and currency.
- Adjust `ndkVersion` in Android build configuration.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_dotenv:
   shimmer:
   flutter_carousel_widget:
+  flutter_rating_bar:
   #  flutter_time_guard: ^0.0.6
 
 
