feat: Implement cart functionality and enhance product UI
- Implement cart functionality including:
    - Adding products to the cart
    - Removing products from the cart
    - Updating product quantity in the cart
    - Displaying cart items on the cart page
    - Showing cart item count on the home page
- Add `ProductCardCartWidget` to handle cart actions on product cards.
- Add `ProductCardChangeQuantity` widget for modifying item quantity.
- Integrate `flutter_floating_bottom_bar` for potential future use.
- Update `CartCubit` to manage cart state and operations.
- Refactor cart data sources and repositories for local storage (Hive).
- Update `CartDTO` and `CartEntity` to include price, quantity, createdAt, and product details.
- Add Hive adapter for `CartDTO`.
- Add `HomeCartIcon` to display cart status in the app bar.
- Modify product card to display category in uppercase and integrate cart actions.
- Update product details page to include cart actions and adjust app bar height.
- Update product grid navigation to refresh cart data after returning from product details.
- Add new routes for cart page.
- Update localization strings for cart-related messages.
- Remove `pretty_qr_code` and `qr` dependencies.
- Make error display in `main.dart` more concise.
- Delete unused `RemoteCartDataSource`.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   shimmer:
   flutter_carousel_widget:
   flutter_rating_bar:
-  #  flutter_time_guard: ^0.0.6
+  flutter_floating_bottom_bar: ^1.3.0
 
 
   # State Management
@@ -44,6 +44,7 @@ dependencies:
   freezed_annotation:
   flutter_secure_storage: ^9.2.4
   json_annotation:
+  collection:
 
   # Routing
   go_router: ^15.2.3
