--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,21 +22,22 @@ dependencies:
   jiffy: ^6.3.2
   flutter_screenutil: ^5.9.3
   auto_size_text:
-  hugeicons: ^0.0.11
-  uuid: ^4.5.1
   connectivity_plus: ^6.1.4
   flutter_dotenv:
   shimmer:
-  flutter_carousel_widget:
   flutter_rating_bar:
   flutter_floating_bottom_bar: ^1.3.0
+  firebase_core:
+  firebase_auth:
+  wolt_modal_sheet: ^0.11.0
+  cached_network_image_plus:
+
 
 
   # State Management
   bloc: ^9.0.0
   flutter_bloc: ^9.1.1
   get_it: ^8.0.3
-  equatable:
 
   # Generator and DB
   hive: ^2.2.3
@@ -49,20 +50,9 @@ dependencies:
   # Routing
   go_router: ^15.2.3
 
-  # Images
-  image_picker: ^1.1.2
-  path_provider: ^2.1.5
-  # pretty_qr_code:
-  path:
-  cached_network_image_plus:
-
   # Localization
   easy_localization: ^3.0.7+1
 
-
-
-  # Notification
-  onesignal_flutter: ^5.3.3
 
 
 dev_dependencies:
@@ -72,13 +62,10 @@ dev_dependencies:
   hive_generator:
   dependency_validator: ^4.1.2
   build_runner: ^2.4.11
-  flutter_native_splash:
 
 
 
 
-  #  flutter pub run build_runner build --delete-conflicting-outputs
-  #  flutter pub run build_runner watch --delete-conflicting-outputs
 
 
 flutter:
